# pgapack

./: .gitignore  .readthedocs.yaml  AUTHORS  CHANGES  CONVENTIONS.rst  COPYRIGHT  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  README.rst  bootstrap.sh  configure  configure.ac  configure.in
docs/: .gitignore  Makefile  generation.eps  tpage.sty  user_guide.bib  user_guide.tex
docs/sphinx/: .gitignore  Doxyfile  Makefile  about.rst  appendices.rst  bib.rst  conf.py  fixman  groups.rst  index.rst  part1.rst  part2.rst  quick.rst  requirements.txt
examples/: Makefile  Makefile.am  README.rst
examples/c/: .gitignore  Makefile  Makefile.am  README.rst  classic.c  deb10.c  dejong.c  example.c  leastsquare.c  maxbit-hc.c  maxbit.c  maxchar.c  maxint-de.c  maxint.c  maxint_de.c  name.c  namefull.c  test.c  udtstr.c
examples/deb/: Makefile  README.rst  constraint.h  deb0.c  deb00.c  deb1.c  deb2.c  deb3.c  deb4.c  deb5.c  deb6.c  deb7.c  deb8.c  deb9.c  optimize.c
examples/fortran/: .gitignore  Makefile  Makefile.am  README.rst  classic.f  constr.f  dejong.f  example.f  maxbit.f  maxchar.f  maxint.f  name.f  namefull.f
examples/mgh/: .gitignore  Makefile  README  README.rst  testprog.f  testprogde.c  testprogdertr.c  testprogmax.f
examples/nsgaii/: .gitignore  Makefile  README.rst  constr.c  constraint.h  crowdingplot  deb7.c  fon.c  kur.c  optimize.c  optimize.h  pol.c  rotated.c  sch.c  srn.c  tnk.c  water.c  water_m.c  x_0_y_1_z_4.html  x_0_y_2.html  x_2_y_1_z_4.html  zdt1.c  zdt1_m.c  zdt2.c  zdt3.c  zdt4.c  zdt6.c
examples/nsgaiii/: .gitignore  Makefile  README.rst  c1_dtlz1.c  c1_dtlz3.c  c2_convex_dtlz2.c  c2_dtlz2.c  c3_dtlz1.c  c3_dtlz4.c  constraint.h  convex_dtlz2.c  crowdingplot3  dtlz1.c  dtlz2.c  dtlz3.c  dtlz4.c  dtlz5.c  dtlz7.c  neg_dtlz2.c  optimize.c  optimize.h  scaled_dtlz1.c  scaled_dtlz2.c
examples/sequence/: .gitignore  Makefile  README.rst  magic.c  optimize.c  (+1 more)
fakempi/: mpi.h  mpif.h
include/: fakempi_h  fakempif_h  pgapack.h  pgapackf.h
source/: Makefile  Makefile.am  binary.c  char.c  cmdline.c  create.c  cross.c  datastr.c  debug.c  duplcate.c  evaluate.c  f2c.c  fitness.c  hamming.c  heap.c  integer.c  linalg.c  mpi_stub.c  mutation.c  parallel.c  pga.c  pop.c  random.c  real.c  report.c  restart.c  select.c  stop.c  system.c  triplet  user.c  utility.c
test/: .gitignore  Makefile  Makefile.am  README  c_classic_1_100.data  c_classic_2_100.data  c_deb10_1.data  c_dejong_1_0_100.data  c_dejong_1_1_100.data  c_dejong_2_0_100.data  c_dejong_2_1_100.data  c_dejong_3_0_100.data  c_dejong_3_1_100.data  c_dejong_4_0_100.data  c_dejong_4_1_100.data  c_dejong_5_0_100.data  c_dejong_5_1_100.data  c_example.data  c_example_1.5.data  c_leastsquare.data  c_maxbit.data  c_maxbit_1.data  c_maxchar_40_500.data  c_maxint-de_20_5_100_100_n_n.data  c_maxint-de_6_5_100_20_y_y.data  c_maxint_40_500.data  c_maxint_5_20_n_y_y_y.data  c_maxint_5_20_y_y_y.data  c_namefull.data  c_udtstr.data  deb_optimize_0.data  deb_optimize_0_1.data  deb_optimize_1.data  deb_optimize_1_1.data  deb_optimize_2.data  deb_optimize_2_1.data  deb_optimize_3.data  deb_optimize_3_1.data  deb_optimize_4.data  deb_optimize_4_1.data  (+202 more)
(+323 files in other folders)
