
lib_LIBRARIES=libpgapack.a

include_HEADERS=$(top_srcdir)/include/*h

AM_CFLAGS=-I../include -DWL=32 -Dgeneric -DOPTIMIZE

libpgapack_a_SOURCES= \
        binary.c        \
        char.c  \
        cmdline.c \
        create.c \
        cross.c \
        debug.c \
        duplcate.c \
        evaluate.c \
        fitness.c \
        hamming.c \
        heap.c   \
        integer.c \
        mutation.c \
        parallel.c \
        pga.c \
        pop.c \
        random.c \
        real.c \
        report.c \
        restart.c \
        select.c \
        stop.c \
        system.c \
        user.c \
        utility.c 
 


