check_PROGRAMS=classic dejong example maxbit maxchar name namefull udtstr
AM_CFLAGS=-I../../include -DWL=32

classic_LDADD= -L../../source -lpgapack -lmpi -lm
dejong_LDADD= -L../../source -lpgapack -lmpi -lm
example_LDADD= -L../../source -lpgapack -lmpi -lm
maxbit_LDADD= -L../../source -lpgapack -lmpi -lm
maxchar_LDADD= -L../../source -lpgapack -lmpi -lm
name_LDADD= -L../../source -lpgapack -lmpi -lm
namefull_LDADD= -L../../source -lpgapack -lmpi -lm
udtstr_LDADD= -L../../source -lpgapack -lmpi -lm
